--- a/coding_test_221126.ipynb
+++ b/coding_test_221126.ipynb
@@ -28,21 +28,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 43,
    "id": "cfdbcb67-ff31-4e07-912e-0a90fd252671",
    "metadata": {},
    "outputs": [],
    "source": [
     "# isprime(x) function is checking whether the input is a prime number or not.\n",
     "def isprime(x):\n",
-    "    for i in range(2, int((x ** 0.5)+1)):\n",
+    "    for i in range(2, int((x ** 0.5)+1), 2):\n",
     "        if x % i == 0:\n",
     "            break\n",
     "    else:\n",
     "        return True\n",
     "    \n",
     "# If N is odd number, return none, if the N is double of a prime number, result would be the prime number. \n",
-    "# If N is even number and n isn't a prime number, \n",
+    "# If N is even number and n isn't a prime number, both plus and minus 1 to n until both number would be the prime numbers.\n",
     "def func(N):\n",
     "    n = N/2\n",
     "    \n",
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 48,
    "id": "db5b12df-376a-4a27-a1c2-df4f4f81423e",
    "metadata": {},
    "outputs": [
@@ -80,7 +80,8 @@
       "None\n",
       "3 5\n",
       "5 5\n",
-      "5 11\n"
+      "5 11\n",
+      "491 509\n"
      ]
     }
    ],
@@ -94,7 +95,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1401f214-8ca6-4eae-8a09-0b10022637ad",
+   "id": "af62cde2-2928-4db2-80f1-ed41e82335bc",
    "metadata": {},
    "outputs": [],
    "source": []
